# personal-website

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cert-renewal.sh  restart.sh
res/: index.html
src/: main.rs
static/: ThomasLienbacher_PGP_pub.asc  Thomas_Lienbacher_gmail_pub.asc  stylesheet.css
