[package]
name = "personal-website"
version = "0.1.1"
edition = "2021"
authors = ["Thomas Lienbacher <lienbacher.tom@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
rustls = "0.18"
actix-web = { version = "3", features = ["rustls"] }
actix-files = "0.3"

[build-dependencies]
chrono = "0.4"
