[package]
name = "personal-website"
version = "0.2.0"
edition = "2021"
authors = ["Thomas Lienbacher <lienbacher.tom@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
actix-web = { version = "4"}
actix-files = "0.6"

[build-dependencies]
chrono = "0.4"
